# herman

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: pull_request.yml  release.yml
herman_watcher_test_files/: sample.rs
src/: constants.rs  errors.rs  helpers.rs  lib.rs  main.rs  types.rs
