[package]
name = "herman"
author = "SeanningTatum"
description = "A rusty daemon that watches folders and organises them automatically."
version = "0.1.0"
edition = "2021"
keywords = ["cli", "scripting", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
notify = "6.0.1"
