[package]
name = "herman"
author = "SeanningTatum"
description = "A rusty daemon that watches folders and organises them automatically."
version = "0.1.2"
edition = "2021"
license = "MIT"
keywords = ["cli", "scripting", "filesystem"]
repository = "https://github.com/SeanningTatum/herman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
notify = "6.0.1"
